--- a/app/src/main/res/drawable/corner_with_rectangle.xml
+++ b/app/src/main/res/drawable/corner_with_rectangle.xml
@@ -10,12 +10,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid android:color="@color/pink" />
-    <stroke
-        android:width="0.01dp"
-        android:color="#bfbfbf" />
+    <!--<stroke-->
+        <!--android:width="0.01dp"-->
+        <!--android:color="#bfbfbf" />-->
     <corners
-        android:topRightRadius="8dp"
-        android:bottomLeftRadius="8dp"
-        android:bottomRightRadius="8dp"
+        android:topRightRadius="6dp"
+        android:bottomLeftRadius="6dp"
+        android:bottomRightRadius="6dp"
         />
 </shape>
