--- a/app/src/main/res/layout/activity_exam.xml
+++ b/app/src/main/res/layout/activity_exam.xml
@@ -75,7 +75,13 @@
                         <!--android:layout_height="50dp"-->
                         <!--android:text="隐藏未发布科目" />-->
                 </LinearLayout>
-
+                <ImageView
+                    android:id="@+id/iv_exam_empty"
+                    android:layout_width="70dp"
+                    android:layout_height="200dp"
+                    android:layout_gravity="center"
+                    android:src="@mipmap/ic_no_data_gray"
+                    android:visibility="visible"/>
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/rv_exam"
                     android:layout_width="match_parent"
