--- a/app/src/main/res/layout/item_lib_query.xml
+++ b/app/src/main/res/layout/item_lib_query.xml
@@ -12,36 +12,30 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:foreground="?attr/selectableItemBackgroundBorderless"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <android.support.v7.widget.CardView
-        android:id="@+id/cv_book_item"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="1dp"
-        style="@style/CardViewClick">
-        <LinearLayout
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_margin="7dp">
+        <TextView
+            android:id="@+id/tv_item_lib_name"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_margin="7dp">
-            <TextView
-                android:id="@+id/tv_item_lib_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="标题"
-                android:gravity="center"
-                android:textSize="17dp"
-                android:layout_marginBottom="5dp"
-                android:textStyle="bold"/>
-            <TextView
-                android:id="@+id/tv_item_lib_info"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="详细位置"
-                android:textSize="14dp"
-                android:gravity="center"
-                android:layout_marginBottom="3dp"/>
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="标题"
+            android:gravity="center"
+            android:textSize="17dp"
+            android:layout_marginBottom="5dp"
+            android:textStyle="bold"/>
+        <TextView
+            android:id="@+id/tv_item_lib_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="详细位置"
+            android:textSize="14dp"
+            android:gravity="center"
+            android:layout_marginBottom="3dp"/>
+    </LinearLayout>
 </LinearLayout>
