--- a/app/src/main/res/layout/item_more_setting.xml
+++ b/app/src/main/res/layout/item_more_setting.xml
@@ -10,13 +10,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:foreground="?attr/selectableItemBackgroundBorderless">
 
     <ImageView
         android:id="@+id/iv_user_setting_item"
-        android:layout_width="26dp"
-        android:layout_height="26dp"
-        android:src="@drawable/ic_all_pink"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
         android:scaleType="centerCrop"
         android:layout_marginLeft="12dp"
         android:layout_gravity="center_vertical"/>
