--- a/app/src/main/res/layout/item_user_grid.xml
+++ b/app/src/main/res/layout/item_user_grid.xml
@@ -11,12 +11,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:foreground="?attr/selectableItemBackgroundBorderless">
 
     <ImageView
         android:id="@+id/user_grid_image"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
