--- a/app/src/main/res/layout/dialog_text.xml
+++ b/app/src/main/res/layout/dialog_text.xml
@@ -15,6 +15,5 @@
     <TextView
         android:id="@+id/tv_text_dialog"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:autoLink="web"/>
+        android:layout_height="wrap_content"/>
 </LinearLayout>
