--- a/app/src/main/res/layout/activity_notice_detail.xml
+++ b/app/src/main/res/layout/activity_notice_detail.xml
@@ -3,37 +3,43 @@
   ~ Created by Febers 2018.
   ~ Copyright (c). All rights reserved.
   ~
-  ~ Last Modified 18-7-28 下午5:55
+  ~ Last Modified 18-9-8 下午8:41
   ~
   -->
 
-<android.support.design.widget.CoordinatorLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".module.news.view.NoticeDetailActivity"
     android:background="?attr/myBackgroundColor">
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:elevation="0dp">
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
         <android.support.v7.widget.Toolbar
-            android:id="@+id/tb_login"
-            app:title="登录"
+            android:id="@+id/tb_notice_detail"
+            app:title="教学管理"
             android:layout_width="match_parent"
             android:layout_height="?android:attr/actionBarSize"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:popupTheme="@style/Theme.AppCompat.Light"
-            app:layout_scrollFlags="enterAlways"/>
+            app:popupTheme="@style/Theme.AppCompat.Light"/>
     </android.support.design.widget.AppBarLayout>
 
-    <FrameLayout
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:id="@+id/container_activity_login"
+    <ProgressBar
+        android:id="@+id/progressbar_notice"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </FrameLayout>
+        android:layout_height="3dp"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:progressDrawable="@drawable/progressbar_bg"
+        android:visibility="gone"/>
+    <WebView
+        android:id="@+id/webview_notice"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </WebView>
 
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
