--- a/app/src/main/res/layout/item_exam.xml
+++ b/app/src/main/res/layout/item_exam.xml
@@ -7,21 +7,11 @@
   ~
   -->
 
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="90dp"
-    android:layout_marginTop="3dp"
-    android:layout_marginLeft="5dp"
-    android:layout_marginBottom="3dp"
-    android:layout_marginRight="5dp"
-    style="@style/CardViewClick">
-
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
         <TextView
             android:id="@+id/tv_exam_item_num"
@@ -104,4 +94,3 @@
         <!--android:text="座位:"-->
         <!--android:textSize="15dp" />-->
     </android.support.constraint.ConstraintLayout>
-</android.support.v7.widget.CardView>
