--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -6,39 +6,26 @@
   ~ Last Modified 18-6-6 下午11:04
   ~
   -->
-
-<android.support.v7.widget.CardView
-    android:id="@+id/cv_news"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="3dp"
-    android:layout_marginLeft="5dp"
-    android:layout_marginBottom="3dp"
-    android:layout_marginRight="5dp"
-    style="@style/CardViewClick">
-
-    <LinearLayout
-        android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:foreground="?attr/selectableItemBackgroundBorderless">
+    <TextView
+        android:id="@+id/tv_news_title"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <TextView
-            android:id="@+id/tv_news_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:gravity="center"
-            android:textSize="18dp"
-            android:textStyle="bold"
-            android:text="这是一段测试用的新闻标题。 如果你看到了这个标题，说明你获取新闻出错了"/>
-        <TextView
-            android:id="@+id/tv_news_date"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:gravity="center"
-            android:text="2018年5月11日"/>
-    </LinearLayout>
-</android.support.v7.widget.CardView>
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:gravity="center"
+        android:textSize="18dp"
+        android:textStyle="bold"
+        android:text="这是一段测试用的新闻标题。 如果你看到了这个标题，说明你获取新闻出错了"/>
+    <TextView
+        android:id="@+id/tv_news_date"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:gravity="center"
+        android:text="2018年5月11日"/>
+</LinearLayout>
