--- a/app/src/main/res/layout/dialog_course_two.xml
+++ b/app/src/main/res/layout/dialog_course_two.xml
@@ -11,7 +11,7 @@
         android:scrollbars="vertical">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
             <TextView
                 android:id="@+id/tv_dialog_course_one_name"
