--- a/app/src/main/res/layout/activity_lib_query.xml
+++ b/app/src/main/res/layout/activity_lib_query.xml
@@ -54,7 +54,8 @@
                     android:id="@+id/rv_lib_query"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:nestedScrollingEnabled="false">
+                    android:nestedScrollingEnabled="false"
+                    tools:ignore="UnusedAttribute">
                 </android.support.v7.widget.RecyclerView>
             </LinearLayout>
         </android.support.v4.widget.NestedScrollView>
