--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -58,6 +58,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="请输入"
+                    android:inputType="text"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
                     android:imeOptions="actionSearch"
@@ -114,7 +115,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                android:textColor="?attr/colorPrimary"
+                android:textColor="@color/grey"
                 android:text="借阅历史(浏览器实现)" />
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
