--- a/app/src/main/res/layout/item_theme.xml
+++ b/app/src/main/res/layout/item_theme.xml
@@ -15,7 +15,7 @@
     android:layout_width="match_parent"
     android:layout_height="45dp"
     android:background="?attr/myBackgroundColor"
-    android:clickable="true">
+    android:foreground="?android:attr/selectableItemBackground">
 
     <ImageView
         android:id="@+id/iv_item_theme"
