解决获取考试情况出错问题

--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -110,7 +110,8 @@
                         app:layout_constraintHorizontal_bias="1.0"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.49" />
+                        app:layout_constraintVertical_bias="0.49"
+                        android:visibility="gone"/>
                 </android.support.constraint.ConstraintLayout>
 
                 <include layout="@layout/layout_divide_line" />
