--- a/app/src/main/res/layout/item_user_grid.xml
+++ b/app/src/main/res/layout/item_user_grid.xml
@@ -33,5 +33,5 @@
         android:layout_gravity="center_vertical"
         android:gravity="center_horizontal"
         android:text="功能"
-        android:textSize="15dp"/>
+        android:textSize="16sp"/>
 </LinearLayout>
