使用File存储大文件，显著减少内存占用。

--- a/app/src/main/res/xml/provider_paths.xml
+++ b/app/src/main/res/xml/provider_paths.xml
@@ -12,4 +12,8 @@
     <external-path name="beta_external_path" path="Download/"/>
     <!--/storage/emulated/0/Android/data/${applicationId}/files/apk/-->
     <external-path name="beta_external_files_path" path="Android/data/"/>
+
+    <external-files-path
+        name="iuestc_file_path"
+        path="Android/data/" />
 </paths>
