--- a/app/src/main/res/layout/activity_theme.xml
+++ b/app/src/main/res/layout/activity_theme.xml
@@ -30,7 +30,7 @@
             app:layout_scrollFlags="enterAlways|snap"/>
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v4.widget.NestedScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="10dp"
@@ -46,5 +46,5 @@
                 android:layout_height="match_parent">
             </android.support.v7.widget.RecyclerView>
         </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
+    </androidx.core.widget.NestedScrollView>
 </android.support.design.widget.CoordinatorLayout>
