--- a/app/src/main/res/layout/item_grade_per.xml
+++ b/app/src/main/res/layout/item_grade_per.xml
@@ -6,7 +6,7 @@
   ~ Last Modified 18-5-27 下午9:47
   ~
   -->
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -92,4 +92,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.963" />
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.ConstraintLayout>
