--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,7 +7,7 @@
   ~
   -->
 
-<android.support.v4.widget.DrawerLayout
+<androidx.core.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -47,5 +47,5 @@
         app:itemIconTint="?attr/colorAccent"
         app:headerLayout="@layout/layout_home_header">
     </android.support.design.widget.NavigationView>
-</android.support.v4.widget.DrawerLayout>
+</androidx.core.widget.DrawerLayout>
 
