--- a/app/src/main/res/layout/activity_service.xml
+++ b/app/src/main/res/layout/activity_service.xml
@@ -7,7 +7,7 @@
   ~
   -->
 
-<android.support.v4.widget.DrawerLayout
+<androidx.core.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -65,4 +65,4 @@
         android:background="?attr/myBackgroundColor"
         app:headerLayout="@layout/layout_home_header">
     </android.support.design.widget.NavigationView>
-</android.support.v4.widget.DrawerLayout>
+</androidx.core.widget.DrawerLayout>
